<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" 
        android:gravity="center_vertical" >

		 <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="35dp"
	        android:layout_weight="1"
	        android:text="@string/cust_id"
	        android:gravity="center"
			 />
		 <EditText 
		     android:id="@+id/edit_custid"
		     android:layout_width="wrap_content"
		     android:layout_height="35dp"
		     android:layout_weight="2"
		     android:hint="@string/cust_id"
		     android:editable="false"
		     android:gravity="center"
		     />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" 
        android:gravity="center_vertical" >

		 <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="35dp"
	        android:layout_weight="1"
	        android:text="@string/cust_name"
	        android:gravity="center"
			 />
		 <EditText 
		     android:id="@+id/edit_custname"
		     android:layout_width="wrap_content"
		     android:layout_height="35dp"
		     android:layout_weight="2"
		     android:hint="@string/cust_name"
		     android:gravity="center"
		     />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" 
        android:gravity="center_vertical" >

		 <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="35dp"
	        android:layout_weight="1"
	        android:text="@string/cust_tel"
	        android:gravity="center"
			 />
		 <EditText 
		     android:id="@+id/edit_custtel"
		     android:layout_width="wrap_content"
		     android:layout_height="35dp"
		     android:layout_weight="2"
		     android:hint="@string/cust_tel"
		     android:numeric="integer"
		     android:gravity="center"
		     />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" 
        android:gravity="center_vertical" >

		 <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="35dp"
	        android:layout_weight="1"
	        android:text="@string/cust_firstTime"
	        android:gravity="center"
			 />
		 <EditText
		     android:id="@+id/edit_custfirstTime"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:hint="@string/cust_firstTime"
		     android:text="@string/time"
		     android:editable="false"
		     android:layout_weight="2"
		     android:gravity="center"
		     />
		 
    </LinearLayout>
    
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" 
        android:gravity="center_vertical" >

		 <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="35dp"
	        android:layout_weight="1"
	        android:text="@string/cust_frequency"
	        android:gravity="center"
			 />
		 <EditText 
		     android:id="@+id/edit_custfrequency"
		     android:layout_width="wrap_content"
		     android:layout_height="35dp"
		     android:layout_weight="2"
		     android:hint="@string/cust_frequency"
		     android:numeric="integer"
		     android:text="10"
		     android:gravity="center"
		     />
    </LinearLayout>
    
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" 
        android:gravity="center_vertical" >

		 <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="35dp"
	        android:layout_weight="1"
	        android:text="@string/cust_total"
	        android:gravity="center"
			 />
		 <EditText 
		     android:id="@+id/edit_custtotal"
		     android:layout_width="wrap_content"
		     android:layout_height="35dp"
		     android:layout_weight="2"
		     android:hint="@string/cust_total"
		     android:gravity="center"
		     android:numeric="integer"
		     android:text="10"
		     />
    </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="vertical" >

		 <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/cust_remark"
	        android:gravity="center"
			 />
		 <EditText 
		     android:id="@+id/edit_custremark"
		     android:layout_width="match_parent"
		     android:layout_height="100dp"
		     android:hint="@string/cust_remark"
		     android:gravity="center"
		     />
    </LinearLayout>
   
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" 
        android:gravity="center_vertical" >

		 <Button 
		    android:id="@+id/cust_editbtnok"
	        android:layout_width="wrap_content"
	        android:layout_height="35dp"
	        android:layout_weight="1"
	        android:text="@string/cust_btnok"
	        android:gravity="center"
			 />
		 <TextView 
		     android:layout_width="wrap_content"
		     android:layout_height="35dp"
		     android:layout_weight="1"
		     />
		 <Button 
		     android:id="@+id/cust_editbtncancle"
		     android:layout_width="wrap_content"
		     android:layout_height="35dp"
		     android:layout_weight="1"
		     android:gravity="center"
		     android:text="@string/cust_btncancel"
		     />
    </LinearLayout>
   
</LinearLayout>
